--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2048</title>
-    <link rel="stylesheet" href="./styles/css/main.css" />
-    <script type="text/javascript" src="scripts/main.js" defer></script>
+    <link rel="stylesheet" href="./main.css" />
+    <script type="text/javascript" src="./main.js" defer></script>
   </head>
   <body>
     <div class="container">
